src/tests/code/fail/fail_int_literal_oct.u
entrypoint: ~()->(iErrorCode:~i64{1})
{
	iErrorCode :=	0q435627934A;	// Characters 9 and A are invalid in a octal integer.
}
